# szynka

./: .atom-build.js  .gitmodules  CMakeLists.txt
NearField/: NearField.pde
assets/: map.txt
src/: assets.cpp  assets.h  glext.txt  int_range.h  opengl.cpp  opengl.h  prefix.h  szynka.cpp
src/shaders/: blit_fg.glsl  blit_vx.glsl  fill_fg.glsl  fill_vx.glsl  hello.glsl  sdf_fg.glsl  sdf_vx.glsl
subs/include/: jogurt_math.h  jogurt_math_printing.h
